syntax = "proto3";

package proto;

option go_package = "CalculatorService/proto";

message IntRequest{
  int64 number = 1;
  string optional_error = 2;
}

message IntResponse{
  int64 number = 1;
  string optional_error = 2;
}

message FloatRequest{
  double number = 1;
  string optional_error = 2;
}

message FloatResponse{
  double number = 1;
  string optional_error = 2;
}

service CalculatorService{
    rpc PrimeNumberDecomposition(IntRequest) returns (stream IntResponse);
}